--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename='styles/styles.css') }}"
     />
 
     <title>IHM TP02 - {% block title %}{% endblock title %}</title>
