--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -3,5 +3,11 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-
+<div class="container mt-auto">
+    <div class="row bg-orange">
+        <h3 class="center">
+            {{ title }}
+        </h3>
+    </div>
+</div>
 {% endblock content %}
