--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,13 @@
       href="{{ url_for('static', filename='styles/styles.css') }}"
     />
 
+    <!-- Colors CSS -->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/colors.css') }}"
+    />
+
     <title>IHM TP02 - {% block title %}{% endblock title %}</title>
   </head>
 
@@ -39,10 +46,14 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('new_path') }}">Nouveau trajet</a>
+            <a class="nav-link" href="{{ url_for('new_path') }}"
+              >Nouveau trajet</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('history_path') }}">Historique des trajets</a>
+            <a class="nav-link" href="{{ url_for('history_path') }}"
+              >Historique des trajets</a
+            >
           </li>
         </ul>
         <span class="navbar-text">
