--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -18,7 +18,7 @@
 
 <div class="container-fluid mt-auto">
     <div class="row">
-        <div class="col-FLUID">
+        <div class="col bg-black">
             <div id='map' style='width: 1600px; height: 840px;'></div>
         </div>
         <div class="col">
