--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -8,13 +8,11 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-auto">
-    <div class="row bg-orange">
-        <h3 class="center">
+    <div class="bg-orange p-1">
+        <p class="h1 text-center">
             {{ title }}
-        </h3>
+        </p>
     </div>
-</div>
 
 <div class="container-fluid mt-auto">
     <div class="row">
