--- a/templates/history_path.html
+++ b/templates/history_path.html
@@ -3,5 +3,9 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-
+<div class="bg-orange p-1">
+    <p class="h1 text-center">
+        {{ title }}
+    </p>
+</div>
 {% endblock content %}
