--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'base.html' import titleHeader with context %}
 
 {% block imports %}
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
@@ -8,28 +9,24 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    <div class="bg-orange p-1">
-        <p class="h1 text-center">
-            {{ title }}
-        </p>
-    </div>
+    {{ titleHeader(title) }}
 
-<div class="container-fluid mt-auto">
-    <div class="row">
-        <div class="col bg-black">
-            <div id='map' style='width: 1600px; height: 840px;'></div>
-        </div>
-        <div class="col">
-            Liste des coordonnées :
+    <div class="container-fluid mt-auto">
+        <div class="row">
+            <div class="col bg-black">
+                <div id='map' style='width: 1600px; height: 840px;'></div>
+            </div>
+            <div class="col">
+                Liste des coordonnées :
+            </div>
         </div>
     </div>
-</div>
 
-<script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoibGViZXJyZWIiLCJhIjoiY2s1NDJtaXF3MGRxMjNubHp3d3kxeDZ5ayJ9.t8vR-bQq05tnhhxR9nXwRw';
-    var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11'
-    });
-</script>
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoibGViZXJyZWIiLCJhIjoiY2s1NDJtaXF3MGRxMjNubHp3d3kxeDZ5ayJ9.t8vR-bQq05tnhhxR9nXwRw';
+        var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11'
+        });
+    </script>
 {% endblock content %}
