--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'base.html' import titleHeader with context %}
 
 {% block title %}Erreur {{ title }}{% endblock %}
 
