--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,16 @@
 
 {% block content %}
     {{ titleHeader(title) }}
+
+    <div class="container p-5 text-center">
+        <div class="row">
+            <div class="col col-huge bg-orange p-5">
+                <a href="#">test</a>
+            </div>
+            <div class="col"></div>
+            <div class="col col-huge bg-orange p-5">
+                <a href="#">test</a>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
