--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% from 'base.html' import titleHeader with context %}
+{% from 'base.html' import dataTables with context %}
 
 {% block imports %}
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+<script src="{{ url_for('static', filename='js/dataTablesActivator.js') }}"></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 {% endblock imports %}
 
@@ -11,13 +13,35 @@
 {% block content %}
     {{ titleHeader(title) }}
 
-    <div class="container-fluid mt-auto">
+    <div class="container-fluid mt-auto bg-black">
         <div class="row">
-            <div class="col bg-black">
+            <div class="col nopadding">
                 <div id='map' style='width: 1600px; height: 840px;'></div>
             </div>
-            <div class="col">
-                Liste des coordonnées :
+            <div class="col nopadding">
+                <table class="table table-dark table-hover">
+                    <thead>
+                        <tr>
+                            <th>Liste des coordonnées :</th>
+                        </tr>
+                    </thead>
+                </table>
+                <table id="dataTable" class="table table-dark table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">X</th>
+                            <th scope="col">Y</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <th scope="row">0.53</th>
+                            <th scope="row">6</th>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -30,3 +54,5 @@
         });
     </script>
 {% endblock content %}
+
+{{ dataTables() }}
