--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,8 @@
   </body>
 </html>
 
+{% block js %}{% endblock js %}
+
 {% macro titleHeader(p_title) %}
 <div class="bg-orange p-1">
   <p class="h1 text-center">
