Datatable parameters added

--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -18,26 +18,56 @@
                 <div id='map' style='width: 1450px; height: 830px;'></div>
             </div>
             <div class="col nopadding">
-                <table class="table table-light table-hover">
+                <table class="table table-light table-hover nopadding">
                     <thead>
                         <tr>
-                            <th>Liste des coordonnées :</th>
+                            <th>Liste des coordonnées du trajet :</th>
                         </tr>
                     </thead>
                 </table>
-                <table id="dataTable" class="table table-light table-hover">
+                <table id="dataTable" class="table table-light table-hover display nopadding">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">X</th>
-                            <th scope="col">Y</th>
+                            <th scope="col">Longitude (X)</th>
+                            <th scope="col">Latitude (Y)</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row">1</th>
-                            <th scope="row">0.53</th>
-                            <th scope="row">6</th>
+                            <td scope="row">1</td>
+                            <td scope="row">1.53</td>
+                            <td scope="row">4</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">2</td>
+                            <td scope="row">2.53</td>
+                            <td scope="row">6</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">3</td>
+                            <td scope="row">3.53</td>
+                            <td scope="row">5</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">4</td>
+                            <td scope="row">3.53</td>
+                            <td scope="row">5</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">5</td>
+                            <td scope="row">3.53</td>
+                            <td scope="row">5</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">6</td>
+                            <td scope="row">3.53</td>
+                            <td scope="row">5</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">7</td>
+                            <td scope="row">3.53</td>
+                            <td scope="row">5</td>
                         </tr>
                     </tbody>
                 </table>
