renamed dataTablesActivator to Parameters

--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -87,5 +87,5 @@
 
 {{ dataTables() }}
 
-<script src="{{ url_for('static', filename='js/dataTablesActivator.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dataTablesParameters.js') }}"></script>
 {% endblock js %}
