--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -11,3 +11,16 @@
     padding: 0 !important;
     margin: 0 !important;
  }
+
+ .grabbable {
+    cursor: move;
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+}
+
+.grabbable:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
+}
