--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
 {% block content %}
     {{ titleHeader(title) }}
 
-    <div class="container p-5 text-center">
+    <div class="container p-5 text-center lk-black">
         <div class="row">
-            <div class="col col-huge bg-orange p-5">
-                <a href="#">test</a>
-            </div>
+            <a href="{{ url_for('new_path') }}">
+                <div class="col col-huge bg-orange p-5"><h5>Effectuer un nouveau trajet</h5></div>
+            </a>
             <div class="col"></div>
-            <div class="col col-huge bg-orange p-5">
-                <a href="#">test</a>
-            </div>
+            <a href="{{ url_for('history_path') }}">
+                <div class="col col-huge bg-orange p-5"><h5>Consulter l'historique des trajets</h5></div>
+            </a>
         </div>
     </div>
 {% endblock content %}
