--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,26 +1,42 @@
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .col-huge {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .nopadding {
-    padding: 0 !important;
-    margin: 0 !important;
- }
+  padding: 0 !important;
+  margin: 0 !important;
+}
 
- .grabbable {
-    cursor: move;
-    cursor: grab;
-    cursor: -moz-grab;
-    cursor: -webkit-grab;
+.grabbable {
+  cursor: move;
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
 }
 
 .grabbable:active {
-    cursor: grabbing;
-    cursor: -moz-grabbing;
-    cursor: -webkit-grabbing;
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 30px;
+}
+
+.grid-item {
+  padding: 5px;
+  text-align: center;
+}
+
+.lk-main {
+    font-size: 30px;
+    text-align: center;
 }
