history_path.html first styling

--- a/templates/history_path.html
+++ b/templates/history_path.html
@@ -5,4 +5,19 @@
 
 {% block content %}
     {{ titleHeader(title) }}
+
+    <div class="grid-container p-5">
+        <div class="grid-item bg-black">
+            <h1 class="text-white">Trajet 1 :</h1>
+        </div>
+        <div class="grid-item bg-black">
+            <h1 class="text-white">Trajet 2 :</h1>
+        </div>
+        <div class="grid-item bg-black">
+            <h1 class="text-white">Trajet 3 :</h1>
+        </div>
+        <div class="grid-item bg-black">
+            <h1 class="text-white">Trajet 4 :</h1>
+        </div>
+    </div>
 {% endblock content %}
