Removed hard coded values

--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -32,66 +32,11 @@
                             <th scope="col" class="bg-orange"></th>
                             <th scope="col">Longitude (X)</th>
                             <th scope="col">Latitude (Y)</th>
-                            <th scope="col">Delete</th>
+                            <th scope="col">Supprimer</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td scope="row">0</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">1.53</td>
-                            <td scope="row">4</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">1</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">1.53</td>
-                            <td scope="row">4</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">2</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">2.53</td>
-                            <td scope="row">6</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">3</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">3.53</td>
-                            <td scope="row">5</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">4</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">3.53</td>
-                            <td scope="row">5</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">5</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">3.53</td>
-                            <td scope="row">5</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">6</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">3.53</td>
-                            <td scope="row">5</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">7</td>
-                            <td scope="row" class="bg-orange grabbable"></td>
-                            <td scope="row">3.53</td>
-                            <td scope="row">5</td>
-                            <td scope="row"><button type="button" class="btn-dark btn-delete">X</button></td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
