--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -14,8 +14,8 @@
 
     <div class="container-fluid mt-auto">
         <div class="row">
-            <div class="col nopadding">
-                <div id='map' style='width: 1450px; height: 830px;'></div>
+            <div class="col-8 nopadding">
+                <div id='map' style='width: 100%; height: 830px;'></div>
             </div>
             <div class="col nopadding">
                 <table class="table table-light table-hover nopadding">
