--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% from 'base.html' import titleHeader with context %}
 {% from 'base.html' import dataTables with context %}
+{% from 'base.html' import chartJs with context %}
 
 {% block imports %}
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
@@ -10,37 +11,51 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    {{ titleHeader(title) }}
+{{ titleHeader(title) }}
 
-    <div class="container-fluid mt-auto">
-        <div class="row">
-            <div class="col-8 nopadding">
-                <div id='map' style='width: 100%; height: 830px;'></div>
-            </div>
-            <div class="col nopadding">
-                <table class="table table-light table-hover nopadding">
-                    <thead>
-                        <tr>
-                            <th>Liste des coordonnées du trajet :</th>
-                        </tr>
-                    </thead>
-                </table>
-                <table id="dataTable" class="table table-light table-hover display nopadding">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col" class="bg-orange"></th>
-                            <th scope="col">Longitude (X)</th>
-                            <th scope="col">Latitude (Y)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
-                    </tbody>
-                </table>
+<div class="container-fluid mt-auto">
+    <div class="row">
+        <div class="col-8 nopadding">
+            <div id='map' style='width: 100%; height: 830px;'></div>
+            <div id="altitudeGraph">
+                <canvas id="myChart"></canvas>
             </div>
         </div>
+        <div class="col nopadding">
+            <table class="table table-light table-hover nopadding">
+                <thead>
+                    <tr>
+                        <th>Liste des coordonnées du trajet</th>
+                        <th><button id="generateChartButton" type="button" class="btn bg-orange"
+                                onclick="generateChartValues()">Générer le
+                                graphe</button></th>
+                        <th><button id="reinitialiseChartButton" type="button" class="btn btn-dark"
+                                onclick="window.location.href='{{ url_for('new_path') }}'">Réinitialiser le
+                                trajet</button></th>
+                    </tr>
+                </thead>
+            </table>
+            <table id="dataTable" class="table table-light table-hover display nopadding">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col" class="bg-orange"></th>
+                        <th scope="col">Longitude (X)</th>
+                        <th scope="col">Latitude (Y)</th>
+                        <th scope="col">Altitute (Z)</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+            <br>
+
+        </div>
     </div>
+    <br>
+    <br>
+</div>
 {% endblock content %}
 
 {% block js %}
@@ -51,4 +66,9 @@
 {{ dataTables() }}
 <script src="{{ url_for('static', filename='js/dataTablesParameters.js') }}"></script>
 <script src="{{ url_for('static', filename='js/dataTablesFunctions.js') }}"></script>
+
+<!-- Chart JS -->
+{{ chartJs() }}
+<script src="{{ url_for('static', filename='js/chartJsParameters.js') }}"></script>
+<script src="{{ url_for('static', filename='js/chartJsFunctions.js') }}"></script>
 {% endblock js %}
