--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -40,3 +40,17 @@
 	font-size: 30px;
 	text-align: center;
 }
+
+#btnTop {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 565px;
+	z-index: 99;
+	border-radius: 4px;
+	opacity: 0.5;
+}
+
+#btnTop:hover {
+	opacity: 1;
+}
