Route and html help page added

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('history_path') }}">Historique des trajets</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('help') }}">Guide</a>
+        </li>
       </ul>
       <span class="navbar-text">
         Analyse géographique d'un trajet
