Guide page redacted

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="{{ url_for('history_path') }}">Historique des trajets</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('help') }}">Guide</a>
+          <a class="nav-link" href="{{ url_for('help') }}">Guide d'utilisation</a>
         </li>
       </ul>
       <span class="navbar-text">
