--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -54,3 +54,18 @@
 #btnTop:hover {
 	opacity: 1;
 }
+
+#info {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	font-size: 11px;
+	line-height: 18px;
+	display: block;
+	margin: 0;
+	padding: 5px 10px;
+	border-radius: 3px;
+}
