--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -19,6 +19,7 @@
     <div class="row">
         <div class="col-8 nopadding">
             <div id='map' style='width: 100%; height: 830px;'></div>
+            <pre id="info"></pre>
             <div id="altitudeGraph">
                 <canvas id="myChart"></canvas>
             </div>
