Saving a path feature added

--- a/templates/new_path.html
+++ b/templates/new_path.html
@@ -69,6 +69,7 @@
     </div>
     <br>
     <br>
+    <button type="button" name="SaveButton" id="saveButton" class="btn btn-success">Sauvegarder</button>
 </div>
 {% endblock content %}
 
