--- a/templates/help.html
+++ b/templates/help.html
@@ -49,7 +49,7 @@
                 </td>
                 <td style="width: 55%;">
                     <p>Sauvegarder le trajet :</p>
-                    <img src="{{ url_for('static', filename='img/Guide21.png') }}" width="100%" height="50%" alt="Sauvegarder le trajet">
+                    <img src="{{ url_for('static', filename='img/Guide21.png') }}" height="50%" alt="Sauvegarder le trajet">
                 </td>
             </tr>
             <tr>
